end-of-semester version
Includes supplements and partial edits

--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,54 @@
 \newpage
 
-\section{Supplemental Problems}
+\section{Final Exam Review (draft, 4/28/15)}
 
-\subsection{Parametric Equations}
+Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
+Since the second midterm, we have covered Sections 5.3, 5.4, 6.1 and 6.2 from your notes as well as Activities A.38--A.48 and A.53 (a handout).  Below is a summary of that content.  
 
+% A.40.Reading Information from a Graph
+% A.41. Parametric Equations
+% A.38.  Constructible Numbers (section 5.4) 
+% Trig Checkup.  Circular trigonometry
+% A.42. Parametric Plots of Circles
+% A.44. Taxicab Distance (section 6.1)
+% A.43. Eclipse the Ellipse
+% A.45. City Geometry and Absolute Value
+% A.47. Midsets Abound (section 6.2)
+% A.48. Tenacity Paracity
+
+\subsection*{Coordinate Geometry}
+\begin{itemize}\itemsep-3pt
+\item Find an equation of a line through a given point parallel to a given line.
+\item Find an equation of a line through a given point perpendicular to a given line.
+\item Given two lines, two circles, or a line and a circle, find their intersection(s) if any.  Describe what is happening geometrically when the algebra yields no solutions, exactly one solution, exactly two solution(s) or infinitely many solutions. 
+\item Given an equation of a circle or a parabola, complete the square to find the center of the circle or the vertex of the parabola.  
+\item What are constructible numbers?  What are some numbers that are not constructible? 
+\end{itemize}
+
+\subsection*{City Geometry}
+\begin{itemize}\itemsep-3pt
+\item Know the distance formula in city geometry, be able to use it, and explain its meaning. 
+\item Given a center and a radius, graph a city-geometry circle and write its equation.  
+\item Given two points in city geometry,  graph their midset and write an equation of the midset.  
+\item Given a focus and a directrix, graph the city-geometry parabola and write its equation.  
+\item Explain the absolute value function in several ways.
+\item Graph and analyze absolute value equations (such as equations of city-geometry circles, midsets, or parabolas) by checking cases.  
+\end{itemize}
+
+\subsection*{Functions}
+\begin{itemize}\itemsep-3pt
+\item What is a function?  What do domain and range mean?  
+\item Why is ``Is this a function?'' a poor question.  What is a better question?  
+\item Graph and analyze parametric equations describing a path in the plane
+\item In what sense are transformations of the plane functions?  What are the input and output values?  What are the domain and range of an isometry or dilation of the plane?  
+\item Describe and analyze functions involving several related variables, such as length, width, area, and perimeter of rectangles.   When fixing one of these quantities, what kinds of functions can you find among the other quantities? 
+\end{itemize}
+
+
+
+%\subsection{Parametric Equations}
+\subsection{Supplemental Review Problems}
+The problems below target content since the second midterm exam. 
 
 \begin{prob} 
 Consider a nonzero vector defined by the ordered pair $(a,b)$. If $\|
@@ -64,7 +109,7 @@ A bug moves according to the following parametric equations, where t is measured
 \end{enumerate}
 \end{prob}
 
-\subsection{Absolute Value, Distance, and City Geometry}
+%\subsection{Absolute Value, Distance, and City Geometry}
 \begin{prob}
 Consider the following equations:  
 \setlength{\arraycolsep}{12pt}
@@ -123,83 +168,112 @@ Recall the method in Euclidean geometry of constructing an equilateral triangle 
 \end{enumerate}
 \end{prob} 
 
-%
-%\begin{prob} 
-%Consider a nonzero vector defined by the ordered pair $(a,b)$. If $\|
-%(a,b)\|$ is the magnitude of this vector, \textbf{use algebra} to
-%explain why
-%\[
-%\frac{(a,b)}{\|(a,b)\|}
-%\]
-%is a new vector whose magnitude is $1$ and whose direction is the same
-%as $(a,b)$.
-%\end{prob} 
-
-\subsection{Measurement}
-\begin{prob}
-If the perimeter of a rectangle is 20 feet, what is the most one can say about the rectangle's area?  If the perimeter of any simple closed 2-dimensional shape is 20 feet, what is the most anyone can say about its area?
-\end{prob}
-
-\begin{prob}
-If the surface area of a rectangular prism is 20 square feet, what is the most one can say about the prism's volume?  If the surface area of any simple closed 3-dimensional shape is 20 square feet, what is the most one can say about its volume? 
-\end{prob}
-
-\begin{prob}
-Why do cute furry animals curl up to stay warm in the winter?  Why are most ugly desert reptiles long and skinny?
-\end{prob}
-
-\begin{prob}Simple closed curve A is contained entirely inside simple closed curve B.  
-\begin{enumerate}
-\item True or False:  The area enclosed by A is less than the area enclosed by B. Explain
-\item True or False:  The perimeter of A is less than the perimeter of B. Explain.  
-\end{enumerate}
-\end{prob}
-
-\begin{prob}
-Is it correct to say that``area is length times width''?  Think about what these three quantities mean.  When would it be correct in the numerical sense and why?  (Make sure you use the meaning of multiplication.)   
-\end{prob}
-
-\begin{prob}
-The apothem of a regular polygon is defined to be the shortest distance from the center of the polygon to an edge.
-\begin{enumerate}
-\item There is a nice relationship between the apothem, perimeter, and area for a regular polygon.  See if you can find it. (Hint:  Split the polygon into congruent triangles from its center and find the area of the polygon in terms of the apothem and perimeter.)  You can assume you know the area of a triangle $=\frac{1}{2}$(Length of Base)(Length of Height).
-\item What does this result say about the area of a circle?  Explain. (Assume you know the circumference of a circle is $2\pi(radius)$.)
-\end{enumerate}
-\end{prob}
-
-\begin{prob}
- Is it correct to say that ``volume is length times width times height''? What must be true about a figure so that the numerical volume can be more easily measured by ``area times height''?
-\end{prob}
-
-\begin{prob}
-Are there figures for which there is no formula for measuring length, area, and volume?  Explain.  What does your answer to this question imply about the teaching of geometric measurement?
-\end{prob}
-
-\begin{prob}
-Convert 25 yards to meters (and 25 meters to yards) using ``2.54 cm in each inch'' as the only Metric-English unit conversion.  Explain the conversion using the meanings of multiplication and division (In particular, when you divide, what kind of division is it?)
-\end{prob}
-
-\begin{prob}
-Now convert 25 square yards to square meters and 25 square meters to square yards.  Do the same with cubic yards and cubic meters.
-\end{prob}
 
 \fixnote{Add problems about oriented area, planimeter.}  
 
+%
+%\begin{prob}
+%Using oriented area, given a quadrilateral $ABCD$, and any point $O$ in the plane, $$\text{area} ABCD = \text{area}\triangle OAB + \text{area}\triangle OBC + \text{area}\triangle OCD + \text{area}\triangle ODA.$$
+%\end{prob}
+%  
+%\begin{prob}
+%A parallelogram with vertices at $(0,0)$, $(a,b)$, $(c,d)$, and $(a+c,b+d)$ has (oriented) area $ad-bc$. 
+%% Draw a big rectangle around it, and subtract the stuff we don't want.
+%% Row reduction of a matrix as parallelograms with same base, same height.  Area (and determinant) is constant.  
+%\end{prob}
+%
+%\begin{prob}
+%If $ad-bc = 0$, then $(a,b)$ and $(c,d)$ are parallel.  What about the converse?  
+%\end{prob}
+
 \begin{prob}
-TIMSS 1995 problem about changing a border for equal areas. 
+A fundamental feature of the basic rigid motions in Euclidean geometry is that they preserve distance and angle.  In city geometry, some basic rigid motions preserve both distance and angle and others fail for various reasons.  Explain.  (Hint:  Some but not all rotations preserve both distance and angle.)  
+\end{prob}
+
+\newpage
+
+\begin{prob} 
+Clearly identify which of the following numbers are constructible and
+which numbers are not constructible.
+\[
+4 \qquad  \sqrt[3]{2} \qquad3.1415926 \qquad \sqrt[3]{125} \qquad \sqrt[6]{7} \qquad \frac{6}{1+\sqrt{5}}
+\]
 \end{prob}
 
 \begin{prob}
-Using oriented area, given a quadrilateral $ABCD$, and any point $O$ in the plane, $$\text{area} ABCD = \text{area}\triangle OAB + \text{area}\triangle OBC + \text{area}\triangle OCD + \text{area}\triangle ODA.$$
+Consider $x=(y-2)^2+3$. 
+\begin{enumerate}
+\item Plot this curve.  
+%\[
+%\includegraphics{complexPlane.pdf}
+%\]
+\item Explain how this might not be the plot of a function.
+
+\item Explain how this could be the plot of a function.
+\end{enumerate}
 \end{prob}
-  
-\begin{prob}
-A parallelogram with vertices at $(0,0)$, $(a,b)$, $(c,d)$, and $(a+c,b+d)$ has (oriented) area $ad-bc$. 
-% Draw a big rectangle around it, and subtract the stuff we don't want.
-% Row reduction of a matrix as parallelograms with same base, same height.  Area (and determinant) is constant.  
+
+
+\begin{prob} 
+Below are two points in City Geometry. 
+\[
+\includegraphics{1166finalmidset.pdf}
+\]
+\begin{enumerate}
+\item Sketch the City Geometry midset of these two points.  
+\item Suppose that $A=(0,0)$ and $B=(2,2)$.  Using taxicab distance in City Geometry, write an equation that must be satisfied by any point $(x,y)$ that is in the midset of $A$ and $B$.  
+\item Explain the connection between the geometry in part (a) and the algebra in part (b) for the case $x > 2$ and $y < 0$.  
+\end{enumerate}
 \end{prob}
 
 \begin{prob}
-If $ad-bc = 0$, then $(a,b)$ and $(c,d)$ are parallel.  What about the converse?  
+Use coordinate constructions to derive the formula for the parabola
+whose focus is the point $(-3,-4)$ and whose directrix is the line $y
+= 2$. Show your work. Note, you should use the Euclidean distance
+formula, and your final answer should start with ``$y = $''.  
 \end{prob}
+
+\begin{prob}
+Comparing Celsius and Fahrenheit.  
+\begin{enumerate}
+\item Water freezes at $0^\circ$ C, which is $32^\circ$ F.  Water boils at $100^\circ$ C, which is $212^\circ$ F.  Use this information to derive a Celsius to Fahrenheit conversion formula.  
+\item Suppose the temperature of a model house increases from $24^\circ$ C to $30^\circ$ X, which seems to be a $25\%$ increase.  Convert these temperatures to Fahrenheit and compute the percent change in degrees Fahrenheit. 
+\item Use your conversion formula to explain why the percent changes are not the same in Fahrenheit as in Celsius.  
+\end{enumerate}
+\end{prob}
+
+
+\begin{prob}
+Surface area of a cylinder.
+\begin{enumerate}
+\item Derive and explain a formula for the surface area of a right cylinder of radius of radius $r$ and height $h$.  
+\item Assuming the radius is fixed, how does the surface area vary with the height?  In other words, what kind of function is it?  Explain briefly.  
+\item Assuming the height is fixed, how does the surface area vary with the radius?  Explain briefly. 
+\end{enumerate}
+\end{prob}
+
+\begin{prob}
+Volume of a cylinder.
+\begin{enumerate}
+\item Derive and explain a formula for the volume of a right cylinder of radius of radius $r$ and height $h$.  
+\item Assuming the radius is fixed, how does the volume vary with the height?  In other words, what kind of function is it?  Explain briefly.  
+\item Assuming the height is fixed, how does the volume vary with the radius?  Explain briefly. 
+\end{enumerate}
+\end{prob}
+
+
+\begin{prob}
+Standard televisions usually have an aspect ratio (width:length) of 4:3.  Wide-screen televisions have an aspect ratio of 16:9.  When Brad's first wide-screen television was a 36 inch (diagonal) model.  Although the new television was clearly wider than the 27 inch (diagonal) standard television it replaced, he was surprised that it did not seem taller than the old television.  Which television was actually taller?  And by how much?  
+\end{prob}
+
+
+%\subsection*{Questions to be added}
+%\begin{enumerate}
+%\item Vertex of parabola, completing the square
+%\item Trigonometry
+%\item Reason with letters.
+%\item Solve for different letters.
+%\item Different units, measurement
+%\item number of solutions 
+%\end{enumerate}
 
