--- a/ParallelsInGeometry/1166-midterm.tex
+++ b/ParallelsInGeometry/1166-midterm.tex
@@ -1,19 +1,51 @@
 \newpage
 
-\section{Midterm 1 Review Problems}
+\section{Midterm 1 Review}
+Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities A.1 -- A.18 (except A.14).  We did not complete all of these activities in class so you will need to fill in some gaps.  In particular, we did not do A.15 at all and we did only a few problems from A.17.  
+\subsection{Review Ideas}
 
+\begin{itemize}\itemsep0em
+\item Be able to state definitions of commonly used terms.
+\item Be able to perform standard constructions and explain why they work. 
+\item Be able to explain key concepts such as area and angle.   
+\item Be able to state precisely the triangle congruence criteria. 
+\item Know the properties of various special quadrilaterals and be able to prove them.  
+\item Know the various centers of a triangle, how to construct them, and whether they can lie outside the triangle.  
+\item Be able to state key theorems and prove them in at least two (2) ways, especially:  
+\begin{itemize}
+\item Isosceles triangle theorem
+\item Pythagorean theorem
+\item The angle sum of a triangle 
+\end{itemize}
+\end{itemize}
+
+\subsection*{Review Problems}
 \begin{prob}
-Describe Euclid's construction for an equilateral triangle, and explain
+Describe Euclid's (compass and straightedge) construction for an equilateral triangle, and explain
 why it works.
 \end{prob}
 
+%\begin{prob}
+%Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.  
+%$$\includegraphics[width=2.5in]{../graphics/median1.pdf}$$
+%\end{prob}
+
+%\begin{prob}
+%Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
+%\end{prob}
+
 \begin{prob}
-Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.  
-$$\includegraphics[width=2.5in]{../graphics/median1.pdf}$$
+Construct a $30$-$60$-$90$ right triangle. Explain the steps in your
+  construction and how you know it works.
 \end{prob}
 
 \begin{prob}
-Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
+Construct a $45$-$45$-$90$ right triangle. Explain the steps in your
+  construction and how you know it works.
+\end{prob}
+
+\begin{prob}
+Where is the orthocenter of a right triangle?  Explain your reasoning.  What about the circumcenter?  Again, explain your reasoning. 
 \end{prob}
 
 \begin{prob}
@@ -44,4 +76,20 @@ Prove:  If a quadrilateral is a parallelogram, then opposite sides are congruent
 Prove:  If opposite sides of a quadrilateral are congruent, then it is a parallelogram.
 \end{prob}
 
+\begin{prob}
+Draw an arbitrary convex quadrilateral.  Form a second quadrilateral by connecting the midpoints of the sides 
+of the first quadrilateral.  Make a conjecture about the second quadrilateral and prove it.  
+\end{prob}
 
+\begin{prob}
+The following picture shows a triangle that has been folded
+  along the dotted lines:
+\[
+\includegraphics{../graphics/origamiPBPTri.pdf}
+\]
+Explain how the picture ``proves'' the following statements:
+\begin{enumerate}
+\item The interior angles of a triangle sum to $180^\circ$. 
+\item The area of a triangle is given by $bh/2$. 
+\end{enumerate}
+\end{prob}
