--- a/ParallelsInGeometry/1166-midterm2.tex
+++ b/ParallelsInGeometry/1166-midterm2.tex
@@ -1,6 +1,34 @@
 \newpage
 
-\section{Midterm 2 Review Problems}
+\section{Midterm 2 Review (final version)}
+
+Midterm 2 will cover Chapter 4, Sections 5.1 and 5.2, Activities A.21--A.36, and the beginning of A.39. Here are some specific reminders:  
+\begin{itemize}\itemsep-3pt
+\item Know the distinction between synthetic and analytic geometry.
+\item Know the basic rigid motions, what is required to specify them, and their definitions. 
+\item Know what it means to say that transformations of the plane are functions.  
+\item Know how to define congruence in terms of basic rigid motions. 
+\item Know how to define similarity in terms of dilations and basic rigid motions.  
+\item Know and be able to use criteria for congruence and similarity of triangles.  
+\item Know how to use transformations  to describe symmetries of figures, including tessellations.  
+\item Know the focus and directrix definition of parabola and be able to use it in both synthetic and analytic geometry.
+\item Know the definition of circle and be able to use it in both synthetic and analytic geometry.
+\item Be aware of assumptions underlying Euclidean geometry and how those assumptions can be different in other geometries (such as spherical geometry).  
+\item Use similarity to find missing lengths by reasoning from the scale factor or from within-figure comparisons.  
+\item Reason about length, area, and volume in similarity situations.  How are rep-tiles related to this question?  
+\item Use shearing and Cavalieri's principle to reason about area and volume.  
+\item If you know the area of a rectangle, what can you say about its perimeter?  What about more general figures?  
+\item If you know the perimeter of a rectangle, what can you say about its area?  What about more general figures? 
+\item In coordinate geometry, what is a point?
+\item In coordinate geometry, what is a line? 
+\item Know how to find an equation of the line containing two given points.  
+\item Know how to derive the distance formula quickly. 
+\item Know how to derive the midpoint formula quickly.  
+\end{itemize}
+
+
+
+\subsection{Midterm 2 Review Problems}
 
 \begin{prob}
 During a solar eclipse we see that the apparent diameter of the Sun and Moon are nearly equal. If the Moon is around 240,000 miles from Earth, the Moon's diameter is about 2000 miles, and the Sun's diameter is about 865,000 miles how far is the Sun from the Earth?
@@ -36,7 +64,7 @@ Suppose you use a photocopier to enlarge a figure to 125\% of its original size.
 \begin{prob}
 Explain how the following picture ``proves'' the Pythagorean Theorem.
 \[
-\includegraphics[scale=0.8]{../graphics/pbpdilation.pdf}
+\includegraphics[scale=0.75]{../graphics/pbpdilation.pdf}
 \]
 \end{prob}
 
@@ -63,17 +91,17 @@ Describe a general (and foolproof) way of demonstrating that any two parabolas a
 Prove that the angle sum of a triangle is $180^\circ$.
 \end{prob}
 
-\begin{prob}
-Construct a tangent line from a point outside a given circle to the circle.
-\end{prob}
-
-\begin{prob}
-Explain how the formula for the volume of a sphere follows from the formula for the volume of a cone and Cavalieri's Principle.
-\end{prob}
-
-\begin{prob}
-Give an informal derivation of the relationship between the circumference and area of a circle. 
-\end{prob}
+%\begin{prob}
+%Construct a tangent line from a point outside a given circle to the circle.
+%\end{prob}
+%
+%\begin{prob}
+%Explain how the formula for the volume of a sphere follows from the formula for the volume of a cone and Cavalieri's Principle.
+%\end{prob}
+%
+%\begin{prob}
+%Give an informal derivation of the relationship between the circumference and area of a circle. 
+%\end{prob}
 
 \begin{prob}
 Given a figure and a rotation of that figure, find the center and angle of rotation.  
@@ -81,14 +109,104 @@ Given a figure and a rotation of that figure, find the center and angle of rotat
 
 \begin{prob}
 In the figure below  $O$ is the center of the circle, $\overline{XY}$ is a diameter, $a = PX$, $b=PY$, and $c=PZ$.  
-$$\includegraphics[scale=0.7]{../graphics/means}$$
+$$\includegraphics[scale=0.6]{../graphics/means}$$
 \begin{enumerate}
 \item Show that $c=\sqrt{ab}$.  
-\item Then use the figure to explain the Arithmetic-Geometric Mean Inequality: 
-$$\frac{a+b}{2} \ge \sqrt{ab}$$
-\item Why is this called the Arithmetic-Geometric Mean Inequality?  
+\item Use the figure to explain the Arithmetic-Geometric Mean Inequality: $\frac{a+b}{2} \ge \sqrt{ab}$.  
+%\item Why is this called the Arithmetic-Geometric Mean Inequality?  
 \end{enumerate}
 \end{prob}
 
 
+\begin{prob}
+If the perimeter of a rectangle is 20 feet, what is the most one can say about the rectangle's area?  If the perimeter of any simple closed 2-dimensional shape is 20 feet, what is the most anyone can say about its area?
+\end{prob}
 
+\begin{prob}
+If the surface area of a rectangular prism is 20 square feet, what is the most one can say about the prism's volume?  If the surface area of any simple closed 3-dimensional shape is 20 square feet, what is the most one can say about its volume? 
+\end{prob}
+
+\begin{prob}
+Why do cute furry animals curl up to stay warm in the winter?  Why are most ugly desert reptiles long and skinny?
+\end{prob}
+
+\begin{prob}Simple closed curve A is contained entirely inside simple closed curve B.  
+\begin{enumerate}
+\item True or False:  The area enclosed by A is less than the area enclosed by B. Explain
+\item True or False:  The perimeter of A is less than the perimeter of B. Explain.  
+\end{enumerate}
+\end{prob}
+
+\begin{prob}
+Is it correct to say that ``area is length times width''?  Think about what these three quantities mean.  When would it be correct in the numerical sense and why?  (Make sure you use the meaning of multiplication.)   
+\end{prob}
+
+%\begin{prob}
+%The apothem of a regular polygon is defined to be the shortest distance from the center of the polygon to an edge.
+%\begin{enumerate}
+%\item There is a nice relationship between the apothem, perimeter, and area for a regular polygon.  See if you can find it. (Hint:  Split the polygon into congruent triangles from its center and find the area of the polygon in terms of the apothem and perimeter.)  You can assume you know the area of a triangle $=\frac{1}{2}$(Length of Base)(Length of Height).
+%\item What does this result say about the area of a circle?  Explain. (Assume you know the circumference of a circle is $2\pi(radius)$.)
+%\end{enumerate}
+%\end{prob}
+
+\begin{prob}
+ Is it correct to say that ``volume is length times width times height''? What must be true about a figure so that the numerical volume can be more easily measured by ``area times height''?
+\end{prob}
+
+\begin{prob}
+Are there figures for which there is no formula for measuring length, area, and volume?  Explain.  What does your answer to this question imply about the teaching of geometric measurement?
+\end{prob}
+
+\begin{prob}
+Convert 25 yards to meters (and 25 meters to yards) using ``2.54 cm in each inch'' as the only Metric-English unit conversion.  Now convert 25 square yards to square meters and 25 square meters to square yards.  Do the same with cubic yards and cubic meters.
+\end{prob}
+
+\begin{prob}
+In track and field, 1600 meters is often called the ``one mile,'' but this is not exactly correct.  Is 1600 meters longer or shorter than one mile?  By how much?  
+\end{prob}
+
+\begin{prob}
+Felicia and Wesley are neighbors.  The common boundary between their properties consists of two line segments, as shown below.  
+$$\includegraphics[scale=0.38]{../graphics/TIMSS}$$
+They would prefer their common boundary to be a single straight segment.  How might they change their boundary so that they 
+each have the same area as they have now?  
+\end{prob}
+
+\begin{prob}
+Write an equation of the line through $(2,4)$ parallel to $5x-3y=1$.  
+Now write an equation of the line through $(x_1,y_1)$ parallel to $ax+by=c$. 
+\end{prob}
+
+\begin{prob}
+Write an equation of the line through $(2,4)$ perpendicular to $5x-3y=1$.  
+Now write an equation of the line through $(x_1,y_1)$ perpendicular to $ax+by=c$. 
+\end{prob}
+
+\begin{prob}
+Intersections of lines.  
+\begin{enumerate}
+\item Find the intersection of the lines $2x-3y=4$ and $3x-5y=3$.  
+\item Find the intersection of the lines $2x-3y=4$ and $-4x+6y=-8$.
+\item Find the intersection of the lines $2x-3y=4$ and $-4x+6y=5$.
+\item How might you have predicted in advance how many solutions to expect for each previous system of equations?
+\item Use algebra to help explain why lines intersect in zero, one, or infinitely many points.  (You know this geometrically, of course.  Here you demonstrate how algebra gives the same result.)  Indicate clearly the algebraic conditions
+for which you get zero, one, or infinitely many points.  
+\end{enumerate}
+\end{prob}
+
+\begin{prob}
+Suppose you have a rectangle with vertices at $(0,0)$, $(a,0)$,
+$(a,b)$ and $(0,b)$. Use algebra to prove that the diagonals have the
+same length.
+\end{prob}
+
+%Other review
+% * Multiplication is not necessarily scaling--unless it is dilation
+%
+% * Use of cavalieri's principle 
+% * Volume as Area of base times height.
+% * Stacking cubic units covering the base. 
+
+
+
+\vfill
