--- a/ParallelsInGeometry/ParallelsInGeometry.tex
+++ b/ParallelsInGeometry/ParallelsInGeometry.tex
@@ -7,12 +7,14 @@
 \usepackage{comment}
 
 %\newenvironment{teachingnote}{\begin{framed}\begin{itshape}\begin{bfseries}\noindent Teaching Note:}{\end{bfseries}\end{itshape}\end{framed}}
+
+%\newenvironment{teachingnote}{\begin{framed}\noindent \textbf{Teaching Note:}}{\end{framed}}
 %\newcommand{\teachingnotes}{With Teaching Notes}
 \excludecomment{teachingnote}
 \newcommand{\teachingnotes}{}
 
-%\def\fixnote#1{\begin{framed}{\color{red}Fixnote: #1}\end{framed}}  % Allows insertion of red notes about needed edits
-\def\fixnote#1{}
+\def\fixnote#1{\begin{framed}{\color{red}Fixnote: #1}\end{framed}}  % Allows insertion of red notes about needed edits
+%\def\fixnote#1{}
 
 %%% This sets how the enumerate command works
 \renewcommand{\theenumi}{$(\mathrm{\arabic{enumi}})$}
