Almost ready for printing

--- a/ParallelsInGeometry/Archives/ParallelsInGeometry2015.tex
+++ b/ParallelsInGeometry/Archives/ParallelsInGeometry2015.tex
@@ -65,10 +65,10 @@
 \input{../chapters/appendix/venn}
 \input{../chapters/appendix/sets}
 \input{../chapters/appendix/measuringArea}
-\input{../chapters/appendix/suitablePrecision}
+%\input{../chapters/appendix/suitablePrecision}
 \input{../chapters/appendix/tiltedSquare}
 \input{../chapters/appendix/pythagorean}
-\input{../chapters/appendix/louieTri}
+\input{../chapters/appendix/louieTri}    
 %\input{../chapters/appendix/louieRegPoly}
 \input{../chapters/appendix/funkyShapes}
 \input{../chapters/appendix/trapezoidArea}
@@ -80,16 +80,16 @@
 \input{../chapters/appendix/aboutMedians}
 
 \input{../chapters/appendix/triangleCenters}
-%\input{../chapters/appendix/eulerLine}
+\input{../chapters/appendix/eulerLine}
 %\input{../chapters/appendix/apothem}
 \input{../chapters/appendix/verify}
 \input{../chapters/appendix/circThms}
 \input{../chapters/appendix/moreCircles}
-%\input{../chapters/appendix/quadDiagonals} % old version
-\input{../chapters/appendix/quadDiagonals2}  
+\input{../chapters/appendix/quadDiagonals} % old verseion
+%\input{../chapters/appendix/quadDiagonals2}  
 
 \input{../chapters/appendix/intoTri}
-%\input{../chapters/appendix/morley}  
+\input{../chapters/appendix/morley}  
 
 % Congruence and Similarity
 \input{../chapters/appendix/congruenceTransformations}
@@ -118,7 +118,7 @@
 % Functions
 \input{../chapters/appendix/areaPerimeter}
 \input{../chapters/appendix/readingInfoFromAGraph}
-\input{../chapters/appendix/circularTrig}
+%\input{../chapters/appendix/circularTrig}
 \input{../chapters/appendix/parametric}
 \input{../chapters/appendix/parametricCircles}
 \input{../chapters/appendix/eclipseTheEllipse}
