--- a/ParallelsInGeometry/Archives/ParallelsInGeometrySupplements2015.tex
+++ b/ParallelsInGeometry/Archives/ParallelsInGeometrySupplements2015.tex
@@ -20,7 +20,7 @@
 
 \title{Parallels \\ in Geometry \\ (Supplements)}
 \author{\teachingnotes}
-\publisher{Math 1166:  Spring 2016 \\ This document was typeset on \today.}
+\publisher{Math 1166:  Spring 2015 \\ This document was typeset on \today.}
 %\date{}
 
 
@@ -37,7 +37,7 @@
 %% Put main text here
 
 
-%\input{../chapters/similarity}  % Bart's notes
+\input{../chapters/similarity}  % Bart's notes
 
 % Section 4.5. Length, area, and volume under scaling (with problems)
 % Section 5.5. Functions and more functions
@@ -63,9 +63,11 @@
 % scaling volume figures (problems are in Turn up the Volume.  Separate into a new activity.)
 % connecting the dots for parametric?  
 % 
-%\input{../chapters/appendix/suitablePrecision}
-%\input{../chapters/appendix/circularTrig}
-%\input{../chapters/appendix/quadDiagonals2}  % replace other version
+\input{../chapters/appendix/suitablePrecision}
+\input{../chapters/appendix/circularTrig}
+\input{../chapters/appendix/quadDiagonals2}  % replace other version
+\input{../chapters/appendix/cityPara}
+
 
 %  Unused activities
 
