--- a/ParallelsInGeometry/teacherEd.sty
+++ b/ParallelsInGeometry/teacherEd.sty
@@ -25,7 +25,9 @@
 \RequirePackage{microtype}
 \RequirePackage{enumerate}
 \RequirePackage{makeidx} %%% gives us our groovy index
-\usepackage{marginfix}
+\RequirePackage{marginfix}
+\RequirePackage{rotating}
+
 
 \makeindex
 
