--- a/ParallelsInGeometry/1166-midterm.tex
+++ b/ParallelsInGeometry/1166-midterm.tex
@@ -25,14 +25,14 @@ Describe Euclid's (compass and straightedge) construction for an equilateral tri
 why it works.
 \end{prob}
 
-%\begin{prob}
-%Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.  
-%$$\includegraphics[width=2.5in]{../graphics/median1.pdf}$$
-%\end{prob}
+\begin{prob}
+Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.  
+$$\includegraphics[width=2.5in]{../graphics/median1.pdf}$$
+\end{prob}
 
-%\begin{prob}
-%Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
-%\end{prob}
+\begin{prob}
+Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
+\end{prob}
 
 \begin{prob}
 Construct a $30$-$60$-$90$ right triangle. Explain the steps in your
@@ -50,6 +50,14 @@ Where is the orthocenter of a right triangle?  Explain your reasoning.  What abo
 
 \begin{prob}
 Show that, given any three non-collinear points in the Euclidean plane, there is a unique circle passing through the three points.
+\end{prob}
+
+\begin{prob}
+Prove: A radius that is perpendicular to a chord bisects the chord. 
+\end{prob}
+
+\begin{prob}
+Prove:  A radius that bisects a chord is perpendicular to the chord. 
 \end{prob}
 
 \begin{prob}
