--- a/ParallelsInGeometry/ParallelsInGeometry.tex
+++ b/ParallelsInGeometry/ParallelsInGeometry.tex
@@ -8,13 +8,13 @@
 
 %\newenvironment{teachingnote}{\begin{framed}\begin{itshape}\begin{bfseries}\noindent Teaching Note:}{\end{bfseries}\end{itshape}\end{framed}}
 
-\newenvironment{teachingnote}{\begin{framed}\noindent \textbf{Teaching Note:}}{\end{framed}}
-\newcommand{\teachingnotes}{With Teaching Notes}
-%\excludecomment{teachingnote}
-%\newcommand{\teachingnotes}{}
+%\newenvironment{teachingnote}{\begin{framed}\noindent \textbf{Teaching Note:}}{\end{framed}}
+%\newcommand{\teachingnotes}{With Teaching Notes}
+\excludecomment{teachingnote}
+\newcommand{\teachingnotes}{}
 
-\def\fixnote#1{\begin{framed}{\color{red}Fixnote: #1}\end{framed}}  % Allows insertion of red notes about needed edits
-%\def\fixnote#1{}
+%\def\fixnote#1{\begin{framed}{\color{red}Fixnote: #1}\end{framed}}  % Allows insertion of red notes about needed edits
+\def\fixnote#1{}
 
 %%% This sets how the enumerate command works
 \renewcommand{\theenumi}{$(\mathrm{\arabic{enumi}})$}
@@ -88,7 +88,7 @@
 %\input{../chapters/appendix/quadDiagonals} % old version
 \input{../chapters/appendix/quadDiagonals2}  
 
-\input{../chapters/appendix/intoTri}
+%\input{../chapters/appendix/intoTri}   % How to cut a polygon into triangles:  Addressed in funkyShapes
 %\input{../chapters/appendix/morley}  
 
 % Congruence and Similarity
@@ -104,6 +104,7 @@
 \input{../chapters/appendix/trigCheckup}
 \input{../chapters/appendix/rational}
 \input{../chapters/appendix/reptiles}
+\input{../chapters/appendix/reptiles2}
 \input{../chapters/appendix/scalingArea}
 \input{../chapters/appendix/volume}
 
@@ -112,8 +113,10 @@
 \input{../chapters/appendix/coordinateConstructions}
 \input{../chapters/appendix/parabola}
 \input{../chapters/appendix/moreMedians}
-\input{../chapters/appendix/perpendicularBisector}
+%\input{../chapters/appendix/perpendicularBisector}  % Coordinate proof that perpendicular bisectors are concurrent.
 \input{../chapters/appendix/constructibleNumbers}
+\input{../chapters/appendix/impossibilities}
+
 
 % Functions
 \input{../chapters/appendix/areaPerimeter}
@@ -159,6 +162,7 @@
 
 %%%% Index and References
 \input{../chapters/back}
-%%%%
+
 
 \end{document}
+
